--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <html>
 <head>
-  <title>Realtime Drawing</title>
+  <title>Fontperessions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">2
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body background="3136974fd2a5d7b590b98ff9e88ad0c7.png">
+<body background="500_F_274394704_63AKumJ4VZ1HwGmHW51pLa2zYMHU9lg6.jpg">
 <center>
-  <h3 class="btn btn-info heading">Changing width, height and postion of a square in Realtime
+  
+  <h3 class="heading">Changing width, height and postion of a square in Realtime
     <br>
     <span class="note">NOTE - Get your left and right wrist closer 
       to reduce the size of the square and to increase the size of 
       the square keep your left and right wrist far from each other. 
       Move you nose to move the square</span>
     <br>
-
+    <hr>
+    <hr>
   </h3>
 </center>
 <div class="copy_right_footer">
-  Devoloped by Prisha AND Karishma mam
+  Devoloped by Prisha 
   </div>
 <script src="main.js"></script>
 </body>
